# AlchemicalLab

./: .gitignore  Dockerfile  README.md  alchemical_cli.py  alchemical_config.py  app.py  config.yaml  docker-compose.yml  generative_api.py  quick_ca_examples.py  requirements.txt  visual_ca_demo.py
CALab/: README.md  ca_animations.py  dark_visual_ca.py  debug_conway.py  ecosystem_evolution.py  emergent_graphs.py  hybrid_ca_aggregator.py  multiscale_emergence.py  narrative_bridge.py  narrative_emergence.py  requirements.txt  setup.py  traditional_ca.py  visual_ca.py  working_life.py
CALab/benchmarking/: ca_benchmark.py
CALab/core/: __init__.py  automaton.py  neighborhoods.py  rules.py
CALab/docs/: RESEARCH_2025.md
CALab/evolutionary/: evo_ca_test.py  genetic_ca.py
CALab/graph_ca/: __init__.py  core.py  emergence.py  rules.py
CALab/neural_ca/: train_example.py
GraphEngine/: __init__.py
StoryLab/: README.md  api_integrations.py  app.py  ca_adapter.py  critic.py  db_manager.py  metrics.py  story_generator.py  test_runner.py  world_dna.md
SynthLab/: README.md  audio_preset.py  ca_engine.py  fractal_generator.py  gpu_test.py  graph_persistence.py  hello_emergence.py  hybrid_framework.py  mobile_agents.py  numpy_simulation.py  pattern_detector.py  terrain_synth.py  test_semantic_ca.py  visualizer.py  working_gpu_ca.py
SynthLab/synth_plugin/: CMakeLists.txt  README.md
SynthLab/synth_plugin/Source/: PluginProcessor.h
docs/: ARCHITECTURE_PLAN.md  AUDIOSYNTH_PLAN.md  CA_SOUND_EXAMPLES.md  COMPUTATIONAL_PARADIGMS.md  INTEGRATION_GUIDE.md  KNOWLEDGE_GRAPH_PLAN.md  STORY_GENERATION_PLAN.md  TOOLS_AND_SOURCES.md
tests/: test_cross_lab.py
(+49 files in other folders)
